Add linkedln info

--- a/index.Rmd
+++ b/index.Rmd
@@ -15,7 +15,7 @@ output:
     }
 </style>
     
-<img src="me.JPG" style = "width:60%" Align = middle/>
+<img src="me.JPG" style = "width:55%"/>
 
 **Welcome to my website!**
 
@@ -23,13 +23,13 @@ output:
 
 # About Me
 
-My name is Yifei. I am a second year M.S. Biostatistics student in the Mailman School of Public Health at Columbia University. I earned my B.S. in Pharmaceutical Science from Sichuan University.
+Hi! My name is Yifei. I am a second year M.S. Biostatistics student in the Mailman School of Public Health at Columbia University. I earned my B.S. in Pharmaceutical Science from Sichuan University.
 
 My research interests focus on the statistical analysis for longitudinal data, especially in the area of infection and psychiatry.
 
 I enjoy watching disney movies and playing tennis. My favorite player is [Roger Federer](https://twitter.com/rogerfederer?lang=en)!
 
-Learn more about me from here!
+Learn more about me from [here](About.html)!
 
 <hr />
 
