--- a/dashboard.Rmd
+++ b/dashboard.Rmd
@@ -103,7 +103,9 @@ instacart_tidy %>%
          yaxis = list(title = "Days Since Prior Order"))
 ```
 
-
+```{r}
+rmarkdown::render("dashboard.Rmd", output_format = "flexdashboard::flex_dashboard")
+```
 
 
 
